# ZilchShaders

./: CMakeLists.txt  LICENSE  Readme.txt
Applications/ZilchShadersTests/: .gitignore  CMakeFiles.cmake  CMakeLists.txt  CopyDataFiles.cmd  ErrorReporting.cpp  ErrorReporting.hpp  Glsl.cpp  Glsl.hpp  Helpers.cpp  Helpers.hpp  IrTests.cpp  IrTests.hpp  Precompiled.hpp  RendererShared.cpp  RendererShared.hpp  ShadersUnitTestLibrary.cpp  ShadersUnitTestLibrary.hpp  TestLoading.cpp  TestLoading.hpp  ZilchTests.cpp  ZilchTests.hpp  main.cpp
Applications/ZilchShadersTests/FragmentExtensions/: BooleanExtensions.zilchFrag  IntegerExtensions.zilchFrag  QuaternionExtensions.zilchFrag  RealExtensions.zilchFrag  SampledImageExtensions.zilchFrag  ShaderLanguages.zilchFrag  StorageImageExtensions.zilchFrag
Applications/ZilchShadersTests/IrErrorTests/: FixedArray1.zilchFrag  FixedArray2.zilchFrag  FixedArray3.zilchFrag  FixedArray4.zilchFrag  FixedArray5.zilchFrag  FixedArray6.zilchFrag  ForEach.zilchFrag  Geometry1.zilchFrag  Geometry2.zilchFrag  Geometry3.zilchFrag  Geometry4.zilchFrag  Implements.zilchFrag  Inheritance.zilchFrag  NonCopyableTypes1.zilchFrag  NonCopyableTypes2.zilchFrag  NonCopyableTypes3.zilchFrag  RuntimeArray1.zilchFrag  RuntimeArray2.zilchFrag  RuntimeArray3.zilchFrag  RuntimeArray4.zilchFrag  RuntimeArray5.zilchFrag  StructDestructor.zilchFrag
Applications/ZilchShadersTests/IrTests/: .gitignore  Basic.expected.spvtxt  Basic.zilchFrag  Functions.expected.spvtxt  LogicalInstructions.expected.spvtxt  LogicalInstructions.zilchFrag  MembersTest.expected.spvtxt  MembersTest.zilchFrag  SamplerTest.expected.spvtxt  Samplers.zilchFrag  Types.expected.spvtxt  Types.zilchFrag
Applications/ZilchShadersTests/RunningIrTests/: BasicVertexFrag.zilchFrag  FracTests.zilchFrag  MatrixRotationTests.zilchFrag  MatrixScaleTests.zilchFrag  MatrixTests.zilchFrag  MatrixTransformTests.zilchFrag  MatrixTranslationTests.zilchFrag  QuaternionTests.zilchFrag  ShaderDefinitions.zilchscript
Libraries/: CMakeLists.txt
Libraries/Common/: CMakeFiles.cmake  CMakeLists.txt  CommonForwardDeclarations.hpp  CommonStandard.cpp  CommonStandard.hpp  Guid.cpp  Platform.hpp  Precompiled.hpp  Random.cpp  Random.hpp  Singleton.hpp  Time.cpp  Time.hpp  VirtualAny.hpp  ZeroVisualizers.natvis
Libraries/Common/Containers/: Algorithm.hpp  Allocator.hpp  Array.hpp  ArrayMap.hpp  ArraySet.hpp  BitStream.cpp  BitStream.hpp  BitStream.inl  BlockArray.hpp  ByteBuffer.cpp  ByteBuffer.hpp  ContainerCommon.hpp  CyclicArray.hpp  HashMap.hpp  HashSet.hpp  HashedContainer.hpp  Hashing.hpp  OrderedHashMap.hpp  OrderedHashSet.hpp  OwnedArray.hpp  SlotMap.hpp  SortedArray.hpp  TypeTraits.hpp  UnsortedMap.hpp
Libraries/Common/Diagnostic/: Console.cpp  Console.hpp
Libraries/Common/Lexer/: Lexer.cpp  Lexer.hpp  Lexer.inl
Libraries/Common/Memory/: Block.cpp  Block.hpp  Pool.cpp  Pool.hpp  Stack.cpp  Stack.hpp
Libraries/Common/Platform/: ExternalLibrary.hpp  File.cpp  File.hpp  FileEvents.hpp  FilePath.hpp  FileSystem.hpp  IpAddress.cpp  Lock.hpp  OsHandle.hpp  PlatformStandard.hpp  Process.cpp  Process.hpp  Socket.hpp  Thread.hpp  ThreadSync.hpp  Timer.hpp  UnicodeUtility.cpp  Utilities.hpp
Libraries/Common/Regex/: Regex.cpp  Regex.hpp  RegexNo.cpp
Libraries/Common/String/: CharacterTraits.cpp  CharacterTraits.hpp  Rune.cpp  Rune.hpp  String.cpp  String.hpp  StringBuilder.cpp  StringBuilder.hpp  StringConversion.cpp  StringConversion.hpp  StringRange.cpp  StringRange.hpp  StringUtility.cpp  StringUtility.hpp  ToString.cpp  ToString.hpp
Libraries/Common/Utility/: BitMath.hpp  (+23 more)
Libraries/FixedContainers/: CMakeFiles.cmake  CMakeLists.txt  FixedArray.hpp  FixedString.hpp  InList.hpp  PointerRange.hpp  Precompiled.hpp
Libraries/Foundation/: BitField.hpp  CMakeFiles.cmake  CMakeLists.txt  Determinism.cpp  Determinism.hpp  Diagnostic.cpp  Diagnostic.hpp  EnumDeclaration.hpp  Precompiled.cpp  Precompiled.hpp  Standard.hpp  StringFormat.hpp  Typedefs.hpp
Libraries/Math/: BoolVector2.cpp  BoolVector2.hpp  BoolVector3.cpp  BoolVector3.hpp  BoolVector4.cpp  BoolVector4.hpp  ByteColor.hpp  CMakeFiles.cmake  CMakeLists.txt  ErrorCallbacks.hpp  EulerAngles.cpp  EulerAngles.hpp  EulerOrder.cpp  EulerOrder.hpp  IntVector2.cpp  IntVector2.hpp  IntVector3.cpp  IntVector3.hpp  IntVector4.cpp  IntVector4.hpp  Math.cpp  Math.hpp  MathImports.hpp  MathTypedefs.hpp  Matrix2.cpp  Matrix2.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  MatrixStorage.hpp  Precompiled.cpp  Precompiled.hpp  Quaternion.cpp  Quaternion.hpp  Random.cpp  Random.hpp  Reals.cpp  Reals.hpp  SharedVectorFunctions.hpp  (+7 more)
Libraries/Memory/: AllocationContainer.hpp  Allocator.cpp  Allocator.hpp  CMakeFiles.cmake  CMakeLists.txt  GraphNode.cpp  GraphNode.hpp  Heap.cpp  Heap.hpp  LocalStackAllocator.hpp  Memory.cpp  Memory.hpp  Precompiled.hpp  Root.cpp  Root.hpp  Stats.hpp  TypedAllocator.hpp  ZeroAllocator.hpp
Libraries/Platform/: CMakeLists.txt  Empty.cmake  SDL.cmake  STL.cmake  Windows.cmake
Libraries/SPIRV-Cross/: spirv_glsl.cpp  spirv_glsl.hpp
Libraries/Zilch/: .gitignore
Libraries/ZilchShaders/: ArithmeticInstructions.cpp  BaseShaderIRTranslator.hpp  BitInstructions.cpp  CMakeFiles.cmake  CMakeLists.txt  CommonInstructions.cpp  CommonInstructions.hpp  ConversionInstructions.cpp  CycleDetection.cpp  CycleDetection.hpp  EntryPointGeneration.cpp  EntryPointGeneration.hpp  ExtensionLibrary.cpp  ExtensionLibrary.hpp  FixedArray.cpp  ForwardDeclarations.hpp  Glsl450Extensions.cpp  LibraryTranslationHelpers.cpp  LibraryTranslationHelpers.hpp  LogicalInstructions.cpp  OperatorKeys.cpp  OperatorKeys.hpp  Precompiled.hpp  ShaderAttributes.cpp  ShaderAttributes.hpp  ShaderByteStream.cpp  ShaderByteStream.hpp  ShaderCodeBuilder.cpp  ShaderCodeBuilder.hpp  ShaderErrors.cpp  ShaderErrors.hpp  ShaderIRLibraryTranslation.cpp  ShaderIRLibraryTranslation.hpp  ShaderImageIntrinsics.cpp  ShaderImageIntrinsics.hpp  ShaderIntrinsicTypes.cpp  ShaderIntrinsicTypes.hpp  ShaderIntrinsics.cpp  ShaderIntrinsicsStaticZilchLibrary.cpp  ShaderIntrinsicsStaticZilchLibrary.hpp  (+47 more)
(+971 files in other folders)
